# scp-machine

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  agents.tex  conanfile.py  ellipsis.yaml  index.html  mkdocs.yml
scp/: CMakeLists.txt  SCPMathOperatorInterpreter.cpp  concurrent_queue.hpp  scp.cpp  scp.hpp  scpAgentEvent.cpp  scpAgentEvent.hpp  scpAgentProcessor.cpp  scpAgentProcessor.hpp  scpEraseOperatorInterpreter.cpp  scpEraseOperatorInterpreter.hpp  scpFinishedInterpretationActionProcessor.cpp  scpFinishedInterpretationActionProcessor.hpp  scpGenOperatorInterpreter.cpp  scpGenOperatorInterpreter.hpp  scpHandlingEventThatInitiatesAgentSCPProgram.cpp  scpIfOperatorInterpreter.cpp  scpIfOperatorInterpreter.hpp  scpInterpretationRequestInitiationAgent.cpp  scpInterpretationRequestInitiationAgent.hpp  scpKeynodes.cpp  scpKeynodes.hpp  scpMathOperatorInterpreter.cpp  scpMathOperatorInterpreter.hpp  scpOperand.cpp  scpOperand.hpp  scpOperator.cpp  scpOperator.hpp  scpOperatorInterpreter.cpp  scpOperatorInterpreter.hpp  scpOperatorSet.cpp  scpOperatorSet.hpp  scpOperatorStr.cpp  scpOperatorStr.hpp  scpParameter.cpp  scpParameter.hpp  scpPrintOperatorInterpreter.cpp  scpPrintOperatorInterpreter.hpp  scpProcessControlOperatorInterpreter.cpp  scpProcessControlOperatorInterpreter.hpp  (+20 more)
scp/erase_operators/: SCPOperatorEraseEl.cpp  SCPOperatorEraseEl.hpp  SCPOperatorEraseElStr3.cpp  SCPOperatorEraseElStr3.hpp  SCPOperatorEraseElStr5.cpp  SCPOperatorEraseElStr5.hpp  SCPOperatorEraseSetStr3.cpp  SCPOperatorEraseSetStr3.hpp  SCPOperatorEraseSetStr5.cpp  SCPOperatorEraseSetStr5.hpp
scp/gen_operators/: SCPOperatorGenEl.cpp  SCPOperatorGenEl.hpp  SCPOperatorGenElStr3.cpp  SCPOperatorGenElStr3.hpp  SCPOperatorGenElStr5.cpp  SCPOperatorGenElStr5.hpp  SCPOperatorSysGen.cpp  SCPOperatorSysGen.hpp
scp/if_operators/: SCPOperatorIfCoin.cpp  SCPOperatorIfCoin.hpp  SCPOperatorIfType.cpp  SCPOperatorIfType.hpp  SCPOperatorIfTypeCoin.cpp  SCPOperatorIfTypeCoin.hpp  SCPOperatorIfVarAssign.cpp  SCPOperatorIfVarAssign.hpp
scp/math_operators/: SCPOperatorACos.cpp  SCPOperatorACos.hpp  SCPOperatorASin.cpp  SCPOperatorASin.hpp  SCPOperatorATg.cpp  SCPOperatorATg.hpp  SCPOperatorContAdd.cpp  SCPOperatorContAdd.hpp  SCPOperatorContDiv.cpp  SCPOperatorContDiv.hpp  SCPOperatorContLn.cpp  SCPOperatorContLn.hpp  SCPOperatorContMult.cpp  SCPOperatorContMult.hpp  SCPOperatorContPow.cpp  SCPOperatorContPow.hpp  SCPOperatorContRandom.cpp  SCPOperatorContRandom.hpp  SCPOperatorContSub.cpp  SCPOperatorContSub.hpp  SCPOperatorCos.cpp  SCPOperatorCos.hpp  SCPOperatorDivInt.cpp  SCPOperatorDivInt.hpp  SCPOperatorDivRem.cpp  SCPOperatorDivRem.hpp  SCPOperatorIfEq.cpp  SCPOperatorIfEq.hpp  SCPOperatorIfGr.cpp  SCPOperatorIfGr.hpp  SCPOperatorSin.cpp  SCPOperatorSin.hpp  SCPOperatorTg.cpp  SCPOperatorTg.hpp  scpoperatoracos.cpp  scpoperatoracos.hpp  scpoperatorasin.cpp  scpoperatorasin.hpp  scpoperatoratg.cpp  scpoperatoratg.hpp  (+10 more)
scp/print_operators/: SCPOperatorPrint.cpp  SCPOperatorPrint.hpp  SCPOperatorPrintEl.cpp  SCPOperatorPrintEl.hpp
scp/process_control_operators/: SCPOperatorCall.cpp  SCPOperatorCall.hpp  SCPOperatorReturn.cpp  SCPOperatorReturn.hpp  SCPOperatorSysWait.cpp  SCPOperatorSysWait.hpp  SCPOperatorWaitReturn.cpp  SCPOperatorWaitReturn.hpp
scp/search_operators/: SCPOperatorSearchElStr3.cpp  SCPOperatorSearchElStr3.hpp  SCPOperatorSearchElStr5.cpp  SCPOperatorSearchElStr5.hpp  SCPOperatorSearchSetStr3.cpp  SCPOperatorSearchSetStr3.hpp  SCPOperatorSearchSetStr5.cpp  SCPOperatorSearchSetStr5.hpp  SCPOperatorSysSearch.cpp  SCPOperatorSysSearch.hpp
scp/src/: scp.hpp  scpAgentEvent.hpp  scpAgentProcessor.cpp  scpEraseOperatorInterpreter.hpp  scpFinishedInterpretationActionProcessor.hpp  scpHandlingEventThatInitiatesAgentSCPProgram.cpp  scpHandlingEventThatInitiatesAgentSCPProgram.hpp  scpIfOperatorInterpreter.cpp  scpIfOperatorInterpreter.hpp  scpMathOperatorInterpreter.cpp  scpMathOperatorInterpreter.hpp  scpOperand.cpp  scpOperatorInterpreter.cpp  scpOperatorInterpreter.hpp  scpOperatorSet.cpp  scpOperatorSet.hpp  scpOperatorStr.cpp  scpParameter.cpp  scpParameter.hpp  scpPrintOperatorInterpreter.cpp  scpProcessControlOperatorInterpreter.cpp  scpProcessDestroyer.cpp  scpProcessDestroyer.hpp  scpProcessInterpreter.cpp  scpProgramExecutionSyncronizer.cpp  scpResult.cpp  scpResult.hpp  scpSearchOperatorInterpreter.hpp  scpStringOperatorInterpreter.cpp  scpType.cpp  scpType.hpp  scpUtils.cpp  scpVarValueOperatorInterpreter.cpp  scpVarValueOperatorInterpreter.hpp  scpWaitEvent.cpp
scp/src/erase_operators/: SCPOperatorEraseEl.cpp  SCPOperatorEraseEl.hpp  SCPOperatorEraseElStr3.cpp  SCPOperatorEraseSetStr3.hpp  SCPOperatorEraseSetStr5.cpp
scp/src/gen_operators/: SCPOperatorGenEl.cpp  SCPOperatorGenElStr3.hpp  SCPOperatorGenElStr5.cpp  SCPOperatorSysGen.hpp
scp/src/if_operators/: SCPOperatorIfCoin.hpp  SCPOperatorIfVarAssign.cpp
scp/src/math_operators/: SCPOperatorACos.cpp  SCPOperatorACos.hpp  SCPOperatorASin.hpp  SCPOperatorContAdd.cpp  SCPOperatorContDiv.cpp  SCPOperatorContDiv.hpp  SCPOperatorContMult.cpp  SCPOperatorContPow.cpp  SCPOperatorContPow.hpp  SCPOperatorCos.cpp  (+8 more)
scp/string_operators/: SCPOperatorContStringConcat.cpp  SCPOperatorContStringConcat.hpp  SCPOperatorStringEndsWith.cpp  SCPOperatorStringEndsWith.hpp  SCPOperatorStringIfEq.cpp  SCPOperatorStringIfEq.hpp  SCPOperatorStringIfGr.cpp  SCPOperatorStringIfGr.hpp  SCPOperatorStringLen.cpp  SCPOperatorStringLen.hpp  SCPOperatorStringReplace.cpp  SCPOperatorStringReplace.hpp  SCPOperatorStringSlice.cpp  SCPOperatorStringSlice.hpp  SCPOperatorStringSplit.cpp  SCPOperatorStringSplit.hpp  SCPOperatorStringStartsWith.cpp  SCPOperatorStringStartsWith.hpp  SCPOperatorStringSub.cpp  SCPOperatorStringSub.hpp  SCPOperatorStringToLowerCase.cpp  SCPOperatorStringToLowerCase.hpp  SCPOperatorStringToUpperCase.cpp  SCPOperatorStringToUpperCase.hpp
scp/tests/: tests.cmake
scp/var_value_operators/: SCPOperatorVarAssign.cpp  SCPOperatorVarAssign.hpp  SCPOperatorVarErase.cpp  SCPOperatorVarErase.hpp
(+173 files in other folders)
